# micopay-protocol

./: TOOLCHAIN.md
.github/ISSUE_TEMPLATE/: config.yml  research_v1_cashout.yml  research_v2_cashin.yml  research_v3_provider.yml  research_v4_onboarding.yml  research_v5_trust.yml
apps/api/src/: index.ts
apps/api/src/__tests__/: zk.test.ts
apps/api/src/db/: merchants.ts
apps/api/src/routes/: zk.ts
apps/api/src/services/: merchant.service.ts  trade.service.ts
circuits/poseidon_preimage/: Nargo.toml  Prover.toml
circuits/poseidon_preimage/src/: main.nr  print_hash.nr_TEMP
circuits/reputation_v1/: Nargo.toml
circuits/reputation_v1/src/: main.nr
contracts/: Cargo.toml
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: lib.rs  test.rs
docs/: AUDIT_APK_WAVE6.md  VALIDATION_DRIPS.md  WAVE6_RESEARCH_ISSUES.md
docs/ZK-as-a-Service/: README.md
micopay/backend/: package-lock.json
micopay/backend/src/services/: trade.service.ts
micopay/frontend/src/: App.tsx
micopay/frontend/src/components/: CancelTradeDialog.tsx  ErrorBoundary.tsx
micopay/frontend/src/pages/: DepositQR.tsx  ExploreMap.tsx  Home.tsx  MerchantSettings.tsx  QRReveal.tsx  SuccessScreen.tsx
micopay/frontend/src/services/: api.ts
micopay/frontend/src/utils/: apiError.ts
